--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,15 @@ dependencies:
     sdk: flutter
 
   http: ^1.2.1
+  get:
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_core: ^2.27.1
+  firebase_auth: ^4.17.9
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
