로그인여부 체크, 로그아웃, 외부화면 연결 작업 및 테스트 완료

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,6 +48,7 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>https</string>
+		<string>http</string>
 	</array>
 </dict>
 </plist>
