--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
   fluttertoast: ^8.2.4
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
