--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.17.9
   fluttertoast: ^8.2.4
   url_launcher: ^6.2.5
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
